highest & lowest sum

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-
-		    click to roll the dice!
+	    	<br>
+		    click to roll the dice! <br><br>
 
 		    -
 	    </footer>
